# pyimpsort

./: .gitignore  .travis-ci.sh  .travis.yml  Cask  LICENSE-MIT  Makefile  README.md  README.python.md  impsort.el  impsort.py  pyimpsort.el  pyimpsort.py  pyproject.toml  setup.py  test_impsort.py  test_pyimpsort.el  test_pyimpsort.py  tox.ini
.github/workflows/: tests.yml
samples/: 10.in  10.out  11.in  11.out  12-grouped.out  12.in  12.out  13.out  2.in  3.in  3.out  4.in  4.out  5.in  5.out  6.in  6.out  7.in  7.out  8.in  8.out  9.in  9.out
samples/el/: 1.in  1.out  2.in  2.out  3.out  4.in  4.out
